# opengl

./: CMakeLists.txt  README.md  glad.zip:Zone.Identifier
include/: shader.h  stb_image.h
include/glad/: glad.h
programs/basics/: CMakeLists.txt
programs/basics/rectangle/: main.cpp
programs/basics/shaders/: mixed.cpp  uniform.cpp
programs/basics/textures/: container.cpp  mixed-exercise.cpp  mixed-exercise.shader.fs  mixed.cpp
programs/basics/triangle/: one.cpp  two-color.cpp  two.cpp
src/: glad.c
